wifi_module_keil_buildable_20260630_221042/build_after_fspfix.log
*** Using Compiler 'V6.24', folder: 'C:\Users\yiziw\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'Target 1'
Note: source file '.\libs\libs.c' - object file renamed from '.\Objects\libs.o' to '.\Objects\libs_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/common_data.c' - object file renamed from '.\Objects\common_data.o' to '.\Objects\common_data_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/hal_data.c' - object file renamed from '.\Objects\hal_data.o' to '.\Objects\hal_data_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/main.c' - object file renamed from '.\Objects\main.o' to '.\Objects\main_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/pin_data.c' - object file renamed from '.\Objects\pin_data.o' to '.\Objects\pin_data_1.o'.Note: source file 'D:/RA6M5/wifi_module_keil/ra_gen/vector_data.c' - object file renamed from '.\Objects\vector_data.o' to '.\Objects\vector_data_1.o'.compiling pin_data.c...
compiling common_data.c...
compiling main.c...
compiling delay.c...
compiling main.c...
compiling common_data.c...
compiling hal_data.c...
src/hal_entry.c(44): error: use of undeclared identifier 'ESUCCESS'
   44 |     if (wifi_init() != ESUCCESS) {
      |                        ^
src/hal_entry.c(58): error: use of undeclared identifier 'ESUCCESS'
   58 |     while (wifi_connect(WIFI_SSID, WIFI_PASSWORD) != ESUCCESS) {
      |                                                      ^
2 errors generated.
compiling hal_entry.c...
compiling hal_data.c...
drivers/drv_esp32.c(470): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
  470 |     memset(ssid_buf, 0, buf_len);
      |     ~~~~~~              ^~~~~~~
drivers/drv_esp32.c(493): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
  493 |     memset(ip_buf, 0, buf_len);
      |     ~~~~~~            ^~~~~~~
drivers/drv_esp32.c(595): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
  595 |     memset(resp_buf, 0, max_len);
      |     ~~~~~~              ^~~~~~~
drivers/drv_esp32.c(648): warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
  648 |     memset(resp_buf, 0, max_len);
      |     ~~~~~~              ^~~~~~~
4 warnings generated.
compiling drv_esp32.c...
compiling r_ioport.c...
compiling pin_data.c...
".\Objects\WiFiModule.axf" - 2 Error(s), 4 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
